# qdo-cli

./: .gitignore  Cargo.toml  Makefile.toml  README.md
data/: sample.html  text.html
frontend/: package-lock.json  package.json
frontend/pages/: index.js
src/: main.rs  utils.rs
src/subcommands/: create.rs  generate.rs  init.rs
templates/: quiz.html
